--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,4 @@
+$screen-phone-small: 320px;
 $screen-phone: 500px;
 
 $brand-primary-color: #2971B9;
